first nested done

--- a/css/style.css
+++ b/css/style.css
@@ -12,3 +12,12 @@ h1{
   padding: 5px 0;
   font-size: 1.5rem;
 }
+
+.nested{
+  padding: 15px;
+}
+
+.green{
+  background-color: #00E265;
+  border: 1px solid #006CFA;
+}
