--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 /* DIV COLOR */
 [class*="col"]{
   background-color: #006CFA;
-  border: 2px solid white;
+  border: 1px solid white;
   color: white;
   min-height: 50px;
   text-align: center;
@@ -20,4 +20,12 @@ h1{
 .green{
   background-color: #00E265;
   border: 1px solid #006CFA;
+}
+
+.space-top{
+  margin-top: 20px;
+}
+
+.space-bottom{
+  margin-bottom: 20px;
 }
