half mushroom face done

--- a/bonus/bonus.css
+++ b/bonus/bonus.css
@@ -18,3 +18,12 @@
 .orange{
   background-color: #f44336;
 }
+
+/* SKIN COLOR */
+.skin{
+  background-color: #ffe39f;
+}
+
+.shade{
+  background-color: #f1c27d;
+}
